[change] - partial support for HotelFacilities entity